--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <figure class="col-xs-12">
-      <h1 class="col-xs-12">FoodMap: Italian Cuisines</h1>
-      <!--<img src="assets/img/fideos.jpg" alt="fideos">
-      <img src="assets/img/pizza.jpeg" alt="pizza">-->
-    </figure>
-
-
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <div class="container"></div>
+      <div class="row"></div>
+      <figure class="col-xs-12">
+        <h1 class="col-xs-12">FoodMap: Italian Cuisines</h1>
+        <h2 class="hidden-xs">Coming soon to bigger devices near you!<b>website on contruction!</b></h2>
+      <!--<img src="assets/img/fideos.jpg" alt="fideos" class="col-xs-12 visible-lg">-->
+      <!-- <img src="assets/img/pizza.jpeg" alt="pizza">-->
+      <!-- loading container!!! <div class="container">
+        <div class="row">
+            <i class="fa fa-spinner fa-pulse fa-3x fa-fw xs-12"></i>
+            <span col-md-6 class="sr-only">Loading...</span>
+        </div>
+      </div>-->
+      </figure>
+    
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
       crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
