adding images to HTML structure

--- a/index.html
+++ b/index.html
@@ -15,17 +15,15 @@
       <div class="row"></div>
       <figure class="col-xs-12">
         <h1 class="col-xs-12">FoodMap: Italian Cuisines</h1>
-        <h2 class="hidden-xs">Coming soon to bigger devices near you!<b>website on contruction!</b></h2>
-      <!--<img src="assets/img/fideos.jpg" alt="fideos" class="col-xs-12 visible-lg">-->
-      <!-- <img src="assets/img/pizza.jpeg" alt="pizza">-->
-      <!-- loading container!!! <div class="container">
-        <div class="row">
-            <i class="fa fa-spinner fa-pulse fa-3x fa-fw xs-12"></i>
-            <span col-md-6 class="sr-only">Loading...</span>
+        <!--Loading icon-->
+      <div class="container">
+        <div class="row loading">
+            <i class="fa fa-spinner fa-pulse fa-4x fa-fw"></i>
+            <span class="sr-only">Loading...</span>
         </div>
-      </div>-->
+      </div>
       </figure>
-    
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
       crossorigin="anonymous"></script>
